--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,7 +15,7 @@
       <label class="form-text">ニックネーム</label>
       <span class="indispensable">必須</span>
     </div>
-    <%= f.text_area :nickname, class:"input-default", id:"nickname", placeholder:"例) furima太郎", maxlength:"40" %>
+    <%= f.text_field :nickname, class:"input-default", id:"nickname", placeholder:"例) furima太郎", maxlength:"40" %>
   </div>
   <div class="form-group">
     <div class='form-text-wrap'>
@@ -53,8 +53,8 @@
       <span class="indispensable">必須</span>
     </div>
     <div class='input-name-wrap'>
-      <%= f.text_area :first_kanji, class:"input-name", id:"first-name", placeholder:"例) 山田" %>
-      <%= f.text_area :last_kanji, class:"input-name", id:"last-name", placeholder:"例) 陸太郎" %>
+      <%= f.text_field :first_kanji, class:"input-name", id:"first-name", placeholder:"例) 山田" %>
+      <%= f.text_field :last_kanji, class:"input-name", id:"last-name", placeholder:"例) 陸太郎" %>
     </div>
   </div>
   <div class="form-group">
@@ -63,8 +63,8 @@
       <span class="indispensable">必須</span>
     </div>
     <div class='input-name-wrap'>
-      <%= f.text_area :first_kana, class:"input-name", id:"first-name-kana", placeholder:"例) ヤマダ" %>
-      <%= f.text_area :last_kana, class:"input-name", id:"last-name-kana", placeholder:"例) リクタロウ" %>
+      <%= f.text_field :first_kana, class:"input-name", id:"first-name-kana", placeholder:"例) ヤマダ" %>
+      <%= f.text_field :last_kana, class:"input-name", id:"last-name-kana", placeholder:"例) リクタロウ" %>
     </div>
   </div>
   <div class="form-group">
