--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -153,7 +153,7 @@
       <% end %>
 
       <%# 商品がない場合のダミー %>
-      <% if Item.exists? == false %>
+      <% if @items.exists? == false %>
         <li class='list'>
           <%= link_to '#' do %>
             <%= image_tag "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/10/a004.png", class: "item-img" %>
