--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,9 +1,12 @@
+.item-name, .item-price {
+  color: black;
+}
+
 .item-lists :hover {
-  background-color: oldlace;
+  background-color: lightyellow;
   transition: 200ms;
 }
 
-
 .item-info {
-  background-color: oldlace;
+  background-color: lightyellow;
 }
