--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -31,7 +31,7 @@
     <%# 商品が売れていない場合はこちらを表示しましょう ←商品購入機能実装時に修正%>
     <%# ログイン状態かつ出品者でない場合購入ボタンを表示 %>
     <% if user_signed_in? && current_user != @item.user %>
-    <%= link_to '購入画面に進む', "#" ,class:"item-red-btn"%>
+    <%= link_to '購入画面に進む', item_orders_path(@item) ,class:"item-red-btn"%>
     <% end %>
     <%# //商品が売れていない場合はこちらを表示しましょう %>
 
