--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -30,8 +30,8 @@
       </p>
     </div>
     <%# /支払額の表示 %>
+    <%= render 'shared/error_messages', model: @order_address %>
     <%= form_with(model: @order_address, url: item_orders_path, method: :post, id: 'charge-form', class: 'transaction-form-wrap',local: true) do |f| %>
-  <%= render 'shared/error_messages', model: @order_address %>
     <%# カード情報の入力 %>
     <div class='credit-card-form'>
       <h1 class='info-input-haedline'>
@@ -42,7 +42,7 @@
           <label class="form-text">カード情報</label>
           <span class="indispensable">必須</span>
         </div>
-        <%= f.text_field 'card-number', class:"input-default", id:"card-number", placeholder:"カード番号(半角英数字)", maxlength:"16" %>
+        <%= f.text_field :card_number, class:"input-default", name:"order[number]", id:"card-number", placeholder:"カード番号(半角英数字)", maxlength:"16" %>
         <div class='available-card'>
           <%= image_tag 'card-visa.gif', class: 'card-logo'%>
           <%= image_tag 'card-mastercard.gif', class: 'card-logo'%>
@@ -56,9 +56,9 @@
           <span class="indispensable">必須</span>
         </div>
         <div class='input-expiration-date-wrap'>
-          <%= f.text_area 'card-month', class:"input-expiration-date", id:"card-exp-month", placeholder:"例)3" %>
+          <%= f.text_area :card_month, class:"input-expiration-date", name:"order[exp_month]", id:"card-exp-month", placeholder:"例)3" %>
           <p>月</p>
-          <%= f.text_area 'card-year', class:"input-expiration-date", id:"card-exp-year", placeholder:"例)23" %>
+          <%= f.text_area :card_year, class:"input-expiration-date", name:"order[exp_year]", id:"card-exp-year", placeholder:"例)23" %>
           <p>年</p>
         </div>
       </div>
@@ -67,7 +67,7 @@
           <label class="form-text">セキュリティコード</label>
           <span class="indispensable">必須</span>
         </div>
-        <%= f.text_field "card-cvc",class:"input-default", id:"card-cvc", placeholder:"カード背面4桁もしくは3桁の番号", maxlength:"4" %>
+        <%= f.text_field :card_cvc,class:"input-default", name:"order[cvc]", id:"card-cvc", placeholder:"カード背面4桁もしくは3桁の番号", maxlength:"4" %>
       </div>
     </div>
     <%# /カード情報の入力 %>
@@ -114,7 +114,7 @@
       </div>
       <div class="form-group">
         <div class='form-text-wrap'>
-          <label class="form-text">電話番号</label>
+          <label class="form-text">電話番号（ハイフン不要）</label>
           <span class="indispensable">必須</span>
         </div>
         <%= f.text_field :phone_number, class:"input-default", id:"phone-number", placeholder:"例）09012345678",maxlength:"11"%>
