--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -39,7 +39,7 @@
       </h1>
       <div class="form-group">
         <div class='form-text-wrap'>
-          <label class="form-text">カード情報</label>
+          <label class="form-text">カード番号（ハイフン不要）</label>
           <span class="indispensable">必須</span>
         </div>
         <%= f.text_field :card_number, class:"input-default", name:"order[number]", id:"card-number", placeholder:"カード番号(半角英数字)", maxlength:"16" %>
