購入済みの場合の設定 修正

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -131,7 +131,7 @@
             <%= link_to item_path(item.id) do %>
               <div class='item-img-content'>
                 <%= image_tag item.image, class: "item-img" if item.image.attached? %>
-                  <% if Order.find_by(item_id: item.id) %>
+                  <% if item.order %>
                     <div class='sold-out'>
                       <span>Sold Out!!</span>
                     </div>
