購入済みの場合の修正2

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,7 +8,7 @@
     </h2>
     <div class='item-img-content'>
       <%= image_tag @item.image ,class:"item-box-img" %>
-      <% if @order %>
+      <% if @item.order %>
         <div class='sold-out'>
           <span>Sold Out!!</span>
         </div>
@@ -30,7 +30,7 @@
     <% end %>
     <%# 商品が売れていない場合はこちらを表示しましょう ←商品購入機能実装時に修正%>
     <%# ログイン状態かつ出品者でない場合購入ボタンを表示 %>
-    <% unless @order %>
+    <% unless @item.order %>
       <% if user_signed_in? && current_user != @item.user %>
         <%= link_to '購入画面に進む', item_orders_path(@item) ,class:"item-red-btn"%>
       <% end %>
