--- a/app/assets/stylesheets/items/new.css
+++ b/app/assets/stylesheets/items/new.css
@@ -1,5 +1,11 @@
 /* border-bottom: 1px solid #eee; */
+a {
+  text-decoration: none;
+}
 
+a:hover {
+  text-decoration: underline;
+}
 
 .items-sell-contents {
   background-color: #f5f5f5;
@@ -181,6 +187,13 @@
   text-align: center;
 }
 
+.sell-btn-contents :hover {
+  width: 100%;
+  text-align: center;
+  background-color: lightpink;
+  cursor: pointer;
+}
+
 .sell-btn {
   background: #ea352d;
   border: 1px solid #ea352d;
@@ -196,6 +209,21 @@
   border: 1px solid #aaa;
   color: #fff;
   padding: 15px 35%;
+  text-decoration: none;
+  align-items: center;
+  text-align: center;
+}
+
+.back-btn-contents {
+  width: 100%;
+  text-align: center;
+}
+
+.back-btn-contents :hover {
+  width: 100%;
+  text-align: center;
+  background-color: lightgray;
+  cursor: pointer;
   text-decoration: none;
 }
 
