--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -21,6 +21,7 @@
         </p>
         <%= f.file_field :image, id:"item-image" %>
       </div>
+      <div id="image-preview"></div>
     </div>
     <%# /出品画像 %>
     <%# 商品名と商品説明 %>
@@ -139,6 +140,8 @@
     <%# 下部ボタン %>
     <div class="sell-btn-contents">
       <%= f.submit "出品する" ,class:"sell-btn",  data: { confirm: "この内容で出品しますか？" } %>
+    </div>
+    <div class="back-btn-contents">
       <%=link_to 'もどる', root_path, class:"back-btn" %>
     </div>
     <%# /下部ボタン %>
