--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,7 +3,7 @@
   <div class='search-bar-contents'>
     <%= link_to image_tag("furima-logo-color.png", class:"furima-icon"), "/" %>
     <form class="search-form" action="#">
-      <input class='input-box' placeholder='キーワードから探す'>
+      <input class="input-box" placeholder="キーワードから探す">
       <button class="search-button">
         <%= image_tag "search.png", class:"search-icon" %>
       </button>
