--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,4 +1,4 @@
-<%= render "shared/second-header"%>
+<%= render "shared/header" %>
 
 <div class='transaction-contents'>
   <div class='transaction-main'>
