--- a/app/assets/stylesheets/items/index.scss
+++ b/app/assets/stylesheets/items/index.scss
@@ -10,6 +10,17 @@ a:hover {
   background: #f8f8f8;
 }
 
+.category-list, .brand-list {
+  width: 15vw;
+  height: 60px;
+  background-color: aliceblue;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
 .categories {
   position: absolute;
   transition: 200ms;
@@ -18,9 +29,17 @@ a:hover {
   z-index: 10;
 }
 
-.categories>.category-menu {
-  padding: 10px 20px 0 10px;
+.category-menu {
+  width: 25vw;
+  padding: 10px 20px 10px 10px;
   background-color: white;
+  color: inherit;
+  display: block;
+}
+
+.categories :hover {
+  background-color: #fffacd;
+  text-decoration: none;
 }
 
 .hidden {
