--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -12,7 +12,7 @@
   <div class='nav'>
     <ul class='lists-left'>
       <li>
-        <div class="category-list", id="category-list">カテゴリー
+        <div class="category-list", id="category-list">カテゴリーから探す
         </div>
         <div class='categories hidden' id="category-menu">
           <%= link_to 'レディース', category_path(category_id: 1), class: "category-menu" %>
@@ -25,10 +25,6 @@
           <%= link_to 'スポーツ・レジャー', category_path(category_id: 8), class: "category-menu"  %>
           <%= link_to 'ハンドメイド', category_path(category_id: 9), class: "category-menu"  %>
           <%= link_to 'その他', category_path(category_id: 10), class: "category-menu"  %>
-        </div>
-      </li>
-      <li>
-        <div class="brand-list", id="brand-list">ブランド
         </div>
       </li>
     </ul>
