前後の商品へ遷移する機能

--- a/app/assets/stylesheets/items/show.css
+++ b/app/assets/stylesheets/items/show.css
@@ -284,9 +284,8 @@
 
 .links {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 50vw;
-
 }
 
 .change-item-btn {
