--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -82,11 +82,9 @@
       <div class="favorite">
         <% if user_signed_in? %>
           <% if @item.favorites.exists?(user_id: current_user.id) %>
-              <%= link_to 'お気に入りから削除', item_favorite_path(@item.id), method: :delete, class: "favorite-btn-delete" %>
+            <%= link_to 'お気に入りから削除', item_favorite_path(@item.id), method: :delete, class: "favorite-btn-delete" %>
           <% else %>
-            <%= form_with(model: [@item, @favorite], local: true) do |f| %>
-              <%= f.submit "お気に入りに追加", class: "favorite-btn-add" %>
-            <% end %>
+            <%= link_to 'お気に入りに追加', item_favorites_path(@item.id), method: :post, class: "favorite-btn-add" %>
           <% end %>
         <% end %>
         <%= image_tag "star.png" ,class:"favorite-star-icon" ,width:"20",height:"20"%>
