--- a/app/assets/stylesheets/items/index.scss
+++ b/app/assets/stylesheets/items/index.scss
@@ -10,19 +10,22 @@ a:hover {
   background: #f8f8f8;
 }
 
-.category-list, .brand-list {
-  width: 15vw;
-  height: 60px;
-  background-color: aliceblue;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 10px;
+li>.category-list {
+  display: inline-block;
+  padding: 0.5em 1em;
+  text-decoration: none;
+  background: #f7f7f7;
+  border-left: solid 6px #30a525;
+  color: #30a525;
+  font-weight: bold;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
+  margin-left: 10px;
   cursor: pointer;
 }
 
 .categories {
   position: absolute;
+  margin-left: 30px;
   border: solid 1px gray;
   box-shadow: 0 10px 10px 0 rgba(0, 0, 0, .5);
   z-index: 10;
@@ -32,7 +35,7 @@ a:hover {
   width: 25vw;
   padding: 10px 20px 10px 10px;
   background-color: white;
-  color: inherit;
+  color: #585858;
   display: block;
 }
 
@@ -44,6 +47,43 @@ a:hover {
 .hidden {
   display: none;
 }
+
+.menu-btn {
+  display: inline-block;
+  padding: 0.5em 1em;
+  text-decoration: none;
+  background: #f7f7f7;
+  border-left: solid 6px #ff7c5c;
+  color: #ff7c5c;
+  font-weight: bold;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
+  margin-left: 10px;
+}
+
+.logout-btn {
+  display: inline-block;
+  padding: 0.5em 1em;
+  text-decoration: none;
+  background: #f7f7f7;
+  border-left: solid 6px #5885ff;
+  color: #5885ff;
+  font-weight: bold;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
+  margin-left: 10px;
+}
+
+.new-user-btn {
+  display: inline-block;
+  padding: 0.5em 1em;
+  text-decoration: none;
+  background: #f7f7f7;
+  border-left: solid 6px #ff9898;
+  color: #ff9898;
+  font-weight: bold;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
+  margin-left: 10px;
+}
+
 
 /* 画面上部の「人生を変えるフリマアプリ」帯部分 */
 .title-contents {
