--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -140,12 +140,12 @@
                   <% end %>
               </div>
               <div class='item-info'>
-                <h3 class='item-name'>
+                <div class='item-name'>
                   <%= item.name %>
-                </h3>
+                </div>
                 <div class='item-price'>
                   <span><%= item.price %>円<br>(税込み)</span>
-                <div class='star-btn'>
+                  <div class='star-btn'>
                   <%= image_tag "star.png", class:"star-icon" %>
                   <span class='star-count'><%= item.favorites.ids.length %></span>
                 </div>
@@ -177,10 +177,5 @@
   </div>
   <%# /商品一覧 %>
 </div>
-<a href="/items/new" class="new-btn">
-  <div class='purchase-btn'>
-    <span class='purchase-btn-text'>出品する</span>
-    <%= image_tag 'camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
-  </div>
-</a>
+<%= render "shared/purchase_btn" %>
 <%= render "shared/footer" %>
