ユーザー情報編集機能

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,5 +29,8 @@
     </tbody>
   </table>
 </div>
+<div class="to-edit-page">
+  <%= link_to 'ユーザー情報編集ページ', edit_user_path(params[:id]) %>
+</div>
 <%= render "shared/purchase_btn" %>
 <%= render "shared/footer" %>
