--- a/app/assets/stylesheets/user/show.css
+++ b/app/assets/stylesheets/user/show.css
@@ -8,7 +8,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  margin: 20px 0 50px 0;
+  margin-top: 20px;
 }
 
 .user-table {
@@ -30,4 +30,10 @@
   padding: 20px;
   border: 1px solid #dedede;
   font-size: 14px;
+}
+
+.to-edit-page {
+  font-size: 28px;
+  text-align: center;
+  margin-bottom: 40px;
 }
