--- a/app/assets/stylesheets/items/show.css
+++ b/app/assets/stylesheets/items/show.css
@@ -182,10 +182,31 @@
   border-radius: 40px;
   width: 15vw;
   min-width: 200px;
-  padding: 1vh 0;
+  height: 45px;
+  color: rgb(249, 75, 0);
+  border: 2px solid black;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px;
+  cursor: pointer;
+  text-decoration: none;
   color: black;
-  border: 2px solid #2d2d2d;
+  box-shadow: 2px 2px 10px gray;
   margin: 0 auto;
+}
+
+.report-btn-set {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.report-btn-set :hover {
+  width: 15vw;
+  background-color: gray;
+  color: black;
+  text-decoration: none;
 }
 
 .report-flag-icon {
